bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:3: error: type mismatch;
 found   : (Boolean, Boolean)
 required: Boolean
  return (sleepIn(false, false),sleepIn(true,false))
         ^